--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,8 @@
 
         <!-- dependency versions in alphanumeric order -->
         <asm.version>9.0</asm.version>
-        <jackson.version>2.10.3</jackson.version>
+        <jackson.version>2.10.5</jackson.version>
+        <jackson-databind.version>2.10.5.1</jackson-databind.version>
         <log4j2.version>2.13.3</log4j2.version>
         <ognl.version>3.2.16</ognl.version>
         <slf4j.version>1.7.30</slf4j.version>
@@ -1154,7 +1155,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
