TextProvider feature addition and cleanup: - Introduce (optional) control flag STRUTS_I18N_SEARCH_DEFAULTBUNDLES_FIRST to request TextProviders read from default resource bundles first, instead of their standard lookup ordering.  Defaults to false. - Minor refactor of AbstractLocalizedTextProvider hierarchy to introduce getDefaultMessageWithAlternateKey() method that repackages existing logic used by the SrutsLocalizedTextProvider and GlobalLocalizedTextProvider. - Update GlobalLocalizedTextProvider method comments to properly reflect the actual logic of some of its methods. - New unit tests to confirm standard and default bundle first lookup ordering. - Cleanup of some unused imports, a few typos, and code formatting items. - Cleanup of default.properties comments to make them more consistent.

--- a/core/src/test/resources/com/opensymphony/xwork2/util/Bar.properties
+++ b/core/src/test/resources/com/opensymphony/xwork2/util/Bar.properties
@@ -18,3 +18,5 @@
 #
 title=Title:
 invalid.fieldvalue.title=Title is invalid!
+title.indexed[*]=Indexed title text for test!
+compare.sameproperty.differentbundles=This is the value in the Bar properties!
