--- a/core/src/test/resources/com/opensymphony/xwork2/util/LocalizedTextUtilTest.properties
+++ b/core/src/test/resources/com/opensymphony/xwork2/util/LocalizedTextUtilTest.properties
@@ -19,3 +19,4 @@
 test.format.date={0,date,short}
 xw377=xw377
 username=Santa
+compare.sameproperty.differentbundles=This is the value in the LocalizedTextUtilTest properties!
