--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -230,9 +230,9 @@ struts.ognl.logMissingProperties=false
 struts.ognl.enableExpressionCache=true
 
 ### Specify the OGNL expression cache factory and BeanInfo cache factory to use.
-### Currently the default implementations are used, but can be replaced with custom ones if desired.
-struts.ognl.expressionCacheFactory=ognlExpressionCacheFactory
-struts.ognl.beanInfoCacheFactory=ognlBeanInfoCacheFactory
+### Currently, the default implementations are used, but can be replaced with custom ones if desired.
+struts.ognl.expressionCacheFactory=defaultOgnlExpressionCacheFactory
+struts.ognl.beanInfoCacheFactory=defaultOgnlBeanInfoCacheFactory
 
 ### Specify a limit to the number of entries in the OGNL expressionCache.
 ### For the standard expressionCache mode, when the limit is exceeded the entire cache's
