--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@
                             </configuration>
                         </plugin>
                         <plugin>
-                            <groupId>org.mortbay.jetty</groupId>
+                            <groupId>org.eclipse.jetty</groupId>
                             <artifactId>jetty-maven-plugin</artifactId>
                             <configuration>
                                 <jvmArgs>${argLine}</jvmArgs>
@@ -248,7 +248,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.5</version>
+                        <version>0.8.8</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
@@ -265,9 +265,9 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.eluder.coveralls</groupId>
+                        <groupId>io.jsonwebtoken.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
-                        <version>4.3.0</version>
+                        <version>4.4.1</version>
                     </plugin>
                 </plugins>
             </build>
