--- a/plugins/portlet-tiles/pom.xml
+++ b/plugins/portlet-tiles/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.0.0-RC4</version>
+        <version>6.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-portlet-tiles-plugin</artifactId>
