--- a/plugins/oval/pom.xml
+++ b/plugins/oval/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-oval-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>DEPRECATED: Struts 2 OVal Plugin (since 2.6)</name>
+    <name>DEPRECATED: Struts 2 OVal Plugin, since 6.0.0</name>
 
     <dependencies>
         <!-- OVal -->
