--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>log4j-jcl</artifactId>
             <version>${log4j2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>opensymphony</groupId>
@@ -191,10 +196,6 @@
                     <stopKey>CTRL+C</stopKey>
                     <stopPort>8999</stopPort>
                     <systemProperties>
-                        <systemProperty>
-                            <name>log4j.configuration</name>
-                            <value>file:${basedir}/src/main/resources/log4j2.xml</value>
-                        </systemProperty>
                         <systemProperty>
                             <name>slf4j</name>
                             <value>false</value>
