--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -167,6 +167,9 @@
                     <includes>
                         <include>it.org.apache.struts2.showcase.*Test</include>
                     </includes>
+                    <systemPropertyVariables>
+                        <http.port>8090</http.port>
+                    </systemPropertyVariables>
                 </configuration>
                 <executions>
                     <execution>
@@ -200,6 +203,9 @@
                             <value>false</value>
                         </systemProperty>
                     </systemProperties>
+                    <httpConnector>
+                        <port>8090</port>
+                    </httpConnector>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webAppSourceDirectory>${basedir}/src/main/webapp/</webAppSourceDirectory>
                     <webAppConfig>
