--- a/plugins/config-browser/pom.xml
+++ b/plugins/config-browser/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.1.0-SNAPSHOT</version>
+        <version>6.0.1</version>
     </parent>
 
     <artifactId>struts2-config-browser-plugin</artifactId>
