--- a/pom.xml
+++ b/pom.xml
@@ -1202,13 +1202,13 @@
             <dependency>
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-core</artifactId>
-                <version>2.2.16.SP1</version>
+                <version>2.4.8.Final</version>
             </dependency>
 
             <dependency>
                 <groupId>org.jboss.weld.se</groupId>
                 <artifactId>weld-se</artifactId>
-                <version>2.2.16.SP1</version>
+                <version>2.4.8.Final</version>
             </dependency>
 
             <dependency>
