--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,7 @@
                 <plugin>
                     <groupId>org.apache.rat</groupId>
                     <artifactId>apache-rat-plugin</artifactId>
+                    <version>0.15</version>
                     <configuration>
                         <useMavenDefaultExcludes>true</useMavenDefaultExcludes>
                         <useIdeaDefaultExcludes>true</useIdeaDefaultExcludes>
